--- a/styles/common.scss
+++ b/styles/common.scss
@@ -543,7 +543,7 @@ main>.section.previous-studies-tab.tabs-container {
 
       &::after {
         content: "";
-        background: url("../icons/arrow-down-black.svg") center center no-repeat;
+        // background: url("../icons/arrow-down-black.svg") center center no-repeat;
         width: 24px;
         height: 24px;
         display: block;
@@ -929,6 +929,7 @@ main>.section.previous-studies-tab.tabs-container {
               box-shadow: 0 0 14px 0 rgb(40 40 40 / 6%);
               width: 170px;
               background: var(--neutrals-white);
+              min-height: 126px;
               height: 100px;
               overflow: auto;
               padding: 2px 6px;
@@ -938,6 +939,7 @@ main>.section.previous-studies-tab.tabs-container {
                 left: unset;
                 right: -56px;
                 width: 170px;
+                min-height: 132px;
                 height: 100px;
                 padding: 5px;
               }
