--- a/styles/styles.css
+++ b/styles/styles.css
@@ -40,7 +40,7 @@ body,
 
 :root {
     /* colors */
-    --background-color: white;
+    --background-color: red;
     --light-color: #f8f8f8;
     --dark-color: #505050;
     --text-color: #131313;
